@@ -2,6 +2,7 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 ======================================================================
 
 * V1.2.14 - 
+- System: Workaround for sdl12-compat library bug affecting keyboard input.
 - System: RISC OS SharedCLibrary build now supports networking.
 - System: Now compiles on Solaris 11 (tested x86_64). Use "gmake".
 - Graphics: Fixed GCOL action codes 5-7 for filled rectangles (this function
